// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter renders large size 1`] = `
.c6 {
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c1 {
  max-height: 164px;
  min-height: 85px;
  max-width: 164px;
  min-width: 85px;
}

.c2 {
  stroke: #345678;
}

.c3 {
  stroke: #567890;
}

.c4 {
  font-weight: bold;
  font-family: OswaldBold,Arial,sans-serif;
  fill: #123456;
  font-size: 80px;
}

.c5 {
  position: relative;
  text-align: center;
  top: -55px;
}

.c5 span {
  color: #123456;
  font-size: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > div:not(:last-child) {
  margin-right: 24px;
}

<div
  className="c0"
  size="lg"
>
  <div
    className="c1"
    size="lg"
  >
    <svg
      height="100%"
      viewBox="-4 -4 164 164"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={78}
        cy={78}
        fill="none"
        r={78}
        strokeWidth={8}
      />
      <circle
        className="c3"
        color="#567890"
        cx={78}
        cy={78}
        fill="none"
        r={78}
        strokeDasharray={490.0884539600077}
        strokeDashoffset={490}
        strokeLinecap="round"
        strokeWidth={8.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 78 78)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-4}
        size="lg"
        textAnchor="middle"
        x="50%"
        y="60%"
      >
        
        11
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="lg"
    >
      <span
        className="c6"
      >
        Tage
      </span>
    </div>
  </div>
  <div
    className="c1"
    size="lg"
  >
    <svg
      height="100%"
      viewBox="-4 -4 164 164"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={78}
        cy={78}
        fill="none"
        r={78}
        strokeWidth={8}
      />
      <circle
        className="c3"
        color="#567890"
        cx={78}
        cy={78}
        fill="none"
        r={78}
        strokeDasharray={490.0884539600077}
        strokeDashoffset={490}
        strokeLinecap="round"
        strokeWidth={8.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 78 78)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-4}
        size="lg"
        textAnchor="middle"
        x="50%"
        y="60%"
      >
        0
        0
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="lg"
    >
      <span
        className="c6"
      >
        Stunden
      </span>
    </div>
  </div>
  <div
    className="c1"
    size="lg"
  >
    <svg
      height="100%"
      viewBox="-4 -4 164 164"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={78}
        cy={78}
        fill="none"
        r={78}
        strokeWidth={8}
      />
      <circle
        className="c3"
        color="#567890"
        cx={78}
        cy={78}
        fill="none"
        r={78}
        strokeDasharray={490.0884539600077}
        strokeDashoffset={490}
        strokeLinecap="round"
        strokeWidth={8.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 78 78)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-4}
        size="lg"
        textAnchor="middle"
        x="50%"
        y="60%"
      >
        0
        0
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="lg"
    >
      <span
        className="c6"
      >
        Minuten
      </span>
    </div>
  </div>
  <div
    className="c1"
    size="lg"
  >
    <svg
      height="100%"
      viewBox="-4 -4 164 164"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={78}
        cy={78}
        fill="none"
        r={78}
        strokeWidth={8}
      />
      <circle
        className="c3"
        color="#567890"
        cx={78}
        cy={78}
        fill="none"
        r={78}
        strokeDasharray={490.0884539600077}
        strokeDashoffset={490}
        strokeLinecap="round"
        strokeWidth={8.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 78 78)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-4}
        size="lg"
        textAnchor="middle"
        x="50%"
        y="60%"
      >
        
        59
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="lg"
    >
      <span
        className="c6"
      >
        Sekunden
      </span>
    </div>
  </div>
</div>
`;

exports[`Counter renders large size with outline 1`] = `
.c6 {
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c1 {
  max-height: 164px;
  min-height: 85px;
  max-width: 164px;
  min-width: 85px;
}

.c2 {
  stroke: #345678;
}

.c3 {
  stroke: #567890;
}

.c4 {
  font-weight: bold;
  font-family: OswaldBold,Arial,sans-serif;
  fill: #123456;
  font-size: 80px;
}

.c5 {
  position: relative;
  text-align: center;
  top: -55px;
}

.c5 span {
  color: #123456;
  font-size: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > div:not(:last-child) {
  margin-right: 24px;
}

<div
  className="c0"
  size="lg"
>
  <div
    className="c1"
    size="lg"
  >
    <svg
      height="100%"
      viewBox="-4 -4 164 164"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={78}
        cy={78}
        fill="none"
        r={74}
        strokeWidth={16}
      />
      <circle
        className="c3"
        color="#567890"
        cx={78}
        cy={78}
        fill="none"
        r={74}
        strokeDasharray={464.9557127312894}
        strokeDashoffset={451}
        strokeLinecap="round"
        strokeWidth={8.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 78 78)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-4}
        size="lg"
        textAnchor="middle"
        x="50%"
        y="60%"
      >
        
        11
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="lg"
    >
      <span
        className="c6"
      >
        Tage
      </span>
    </div>
  </div>
  <div
    className="c1"
    size="lg"
  >
    <svg
      height="100%"
      viewBox="-4 -4 164 164"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={78}
        cy={78}
        fill="none"
        r={74}
        strokeWidth={16}
      />
      <circle
        className="c3"
        color="#567890"
        cx={78}
        cy={78}
        fill="none"
        r={74}
        strokeDasharray={464.9557127312894}
        strokeDashoffset={465}
        strokeLinecap="round"
        strokeWidth={8.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 78 78)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-4}
        size="lg"
        textAnchor="middle"
        x="50%"
        y="60%"
      >
        0
        0
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="lg"
    >
      <span
        className="c6"
      >
        Stunden
      </span>
    </div>
  </div>
  <div
    className="c1"
    size="lg"
  >
    <svg
      height="100%"
      viewBox="-4 -4 164 164"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={78}
        cy={78}
        fill="none"
        r={74}
        strokeWidth={16}
      />
      <circle
        className="c3"
        color="#567890"
        cx={78}
        cy={78}
        fill="none"
        r={74}
        strokeDasharray={464.9557127312894}
        strokeDashoffset={465}
        strokeLinecap="round"
        strokeWidth={8.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 78 78)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-4}
        size="lg"
        textAnchor="middle"
        x="50%"
        y="60%"
      >
        0
        0
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="lg"
    >
      <span
        className="c6"
      >
        Minuten
      </span>
    </div>
  </div>
  <div
    className="c1"
    size="lg"
  >
    <svg
      height="100%"
      viewBox="-4 -4 164 164"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={78}
        cy={78}
        fill="none"
        r={74}
        strokeWidth={16}
      />
      <circle
        className="c3"
        color="#567890"
        cx={78}
        cy={78}
        fill="none"
        r={74}
        strokeDasharray={464.9557127312894}
        strokeDashoffset={9}
        strokeLinecap="round"
        strokeWidth={8.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 78 78)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-4}
        size="lg"
        textAnchor="middle"
        x="50%"
        y="60%"
      >
        
        59
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="lg"
    >
      <span
        className="c6"
      >
        Sekunden
      </span>
    </div>
  </div>
</div>
`;

exports[`Counter renders small size 1`] = `
.c6 {
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c1 {
  max-height: 96px;
  min-height: 85px;
  max-width: 96px;
  min-width: 85px;
}

.c2 {
  stroke: #345678;
}

.c3 {
  stroke: #567890;
}

.c4 {
  font-weight: bold;
  font-family: OswaldBold,Arial,sans-serif;
  fill: #123456;
  font-size: 32px;
}

.c5 {
  position: relative;
  text-align: center;
  top: -48px;
}

.c5 span {
  color: #123456;
  font-size: 12px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > div:not(:last-child) {
  margin-right: 16px;
}

<div
  className="c0"
  size="sm"
>
  <div
    className="c1"
    size="sm"
  >
    <svg
      height="100%"
      viewBox="-2 -2 96 96"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={46}
        cy={46}
        fill="none"
        r={46}
        strokeWidth={4}
      />
      <circle
        className="c3"
        color="#567890"
        cx={46}
        cy={46}
        fill="none"
        r={46}
        strokeDasharray={289.02652413026095}
        strokeDashoffset={289}
        strokeLinecap="round"
        strokeWidth={4.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 46 46)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-2}
        size="sm"
        textAnchor="middle"
        x="50%"
        y="51%"
      >
        
        11
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="sm"
    >
      <span
        className="c6"
      >
        Tage
      </span>
    </div>
  </div>
  <div
    className="c1"
    size="sm"
  >
    <svg
      height="100%"
      viewBox="-2 -2 96 96"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={46}
        cy={46}
        fill="none"
        r={46}
        strokeWidth={4}
      />
      <circle
        className="c3"
        color="#567890"
        cx={46}
        cy={46}
        fill="none"
        r={46}
        strokeDasharray={289.02652413026095}
        strokeDashoffset={289}
        strokeLinecap="round"
        strokeWidth={4.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 46 46)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-2}
        size="sm"
        textAnchor="middle"
        x="50%"
        y="51%"
      >
        0
        0
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="sm"
    >
      <span
        className="c6"
      >
        Stunden
      </span>
    </div>
  </div>
  <div
    className="c1"
    size="sm"
  >
    <svg
      height="100%"
      viewBox="-2 -2 96 96"
      width="100%"
    >
      <circle
        className="c2"
        color="#345678"
        cx={46}
        cy={46}
        fill="none"
        r={46}
        strokeWidth={4}
      />
      <circle
        className="c3"
        color="#567890"
        cx={46}
        cy={46}
        fill="none"
        r={46}
        strokeDasharray={289.02652413026095}
        strokeDashoffset={289}
        strokeLinecap="round"
        strokeWidth={4.5}
        style={
          Object {
            "transition": "stroke-dashoffset 1s ease-out",
          }
        }
        transform="rotate(270 46 46)"
      />
      <text
        className="c4"
        color="#123456"
        dx={-2}
        size="sm"
        textAnchor="middle"
        x="50%"
        y="51%"
      >
        0
        0
      </text>
    </svg>
    <div
      className="c5"
      color="#123456"
      size="sm"
    >
      <span
        className="c6"
      >
        Minuten
      </span>
    </div>
  </div>
</div>
`;
